--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <h1>Try to guess the number</h1>
 
+  <p>Try to find the random number between 1 and 100. Can you guess it in 10 turns or fewer? Hint: I'll let you know if your guess was too high or too low.</p>
+
+  <div class="form">
+    <label for="guessField">Enter a guess: </label><input type="text" id="guessField" class="guessField">
+    <input type="submit" value="Submit guess" class="guessSubmit">
+  </div>
+
+  <div class="resultParas">
+    <p class="guesses"></p>
+    <p class="lastResult"></p>
+    <p class="lowOrHi"></p>
+  </div>
 
 
 
